hphp/hack/test/typecheck/stricter_consts/interface_trait_2.bad.php.exp
File "interface_trait_2.bad.php", line 13, characters 7-7:
Some members in class `C` are incompatible with those declared in type `T` (Typing[4374])
  File "interface_trait_2.bad.php", line 5, characters 13-13:
  Non-abstract constants defined in an interface or trait cannot conflict with other inherited constants.
  File "interface_trait_2.bad.php", line 9, characters 13-13:
  `X` inherited from `T`
  File "interface_trait_2.bad.php", line 5, characters 13-13:
  conflicts with constant `X` inherited from `I`.
