hphp/hack/test/typecheck/stricter_consts/interface_trait_2.bad.php
<?hh
// Copyright (c) Facebook, Inc. and its affiliates. All Rights Reserved.

interface I {
  const int X = 2;
}

trait T {
  const int X = 1;
}

class C implements I {
  use T;
}
